Fixed readability

--- a/style.css
+++ b/style.css
@@ -144,3 +144,7 @@ body {
 .submit:active {
   background-color: #06b;
 }
+
+.resultado {
+  color: white;
+}
